welfare room_removed transition effect (for now)

--- a/public/index.html
+++ b/public/index.html
@@ -98,11 +98,17 @@
           <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6140="opacity:1;" data-6370="opacity:0;"></div>
           <!-- end "pod_room_IA" photo -->
 
-         <!-- "WelfareRoom" video -->
-
-          <div class="video-container" data-transitions='{"videoFeature":[]}' style="height:1200px;">
+          <!-- "WelfareRoom" video -->
+          <div class="video-container" style="height:1200px;">
             <video data-mediaid="WelfareRoom"  data-startmedia="5400" data-stopmedia="7200"></video>
           </div>
+          <!-- end "WelfareRoom" video -->   
+
+         <!-- "WelfareRoom" video -->
+
+          <!-- <div class="video-container" data-transitions='{"videoFeature":[]}' style="height:1200px;"> -->
+            <!-- <video data-mediaid="WelfareRoom"  data-startmedia="5400" data-stopmedia="7200"></video> -->
+          <!-- </div> -->
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
@@ -128,13 +134,11 @@
           <!-- end "fan02_NoAudio" video -->  
    
 
-
           <!-- "making_steel" video -->
           <div class="video-container" style="height:800px;">
             <video data-mediaid="making_steel"  data-startmedia="11100" data-stopmedia="12850"></video>
           </div>
           <!-- end "making_steel" video -->     
-
 
 
           <!-- "high_house_gears01_JB" photo -->
@@ -224,7 +228,7 @@
           <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "construction_snow02_AR" photo -->
 
-          
+
           <!-- "demolition686_steel_JB" photo -->
           <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
           <!-- end "demolition686_steel_JB" photo -->
