--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
           <!-- end "pod_room_IA" photo -->
 
           <!-- "WelfareRoom" video -->
-          <div class="video-container" style="height:1200px;">
+          <div class="video-container" style="height:550px;margin-top: 0px;margin-bottom: 650px;" >">
             <video data-mediaid="WelfareRoom"  data-startmedia="5400" data-stopmedia="7200"></video>
           </div>
           <!-- end "WelfareRoom" video -->   
@@ -220,9 +220,17 @@
           <!-- end "Demolition" video -->
 
 
-        <!-- "destruction01_AR" photo -->
+          <!-- "destruction01_AR" photo -->
           <div data-mediaid="destruction01_AR" class="image cover-bg" style="height:900px;" data-20400="opacity:0;" data-20900="opacity:0.5;" data-21000="opacity:1;"></div>
           <!-- end "destruction01_AR" photo -->
+
+
+         <!-- "casino_chain" video -->
+          <div class="video-container" style="height:1200px;">
+            <video data-mediaid="casino_chain"  data-startmedia="21000" data-stopmedia="23000"></video>
+          </div>
+          <!-- end "casino_chain" video -->  
+
 
         <!-- "construction_snow02_AR" photo -->
           <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
@@ -233,14 +241,14 @@
           <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
           <!-- end "demolition686_steel_JB" photo -->
 
-        <!-- "construction04_AR" photo -->
-          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" " data-20400="opacity:0;" data-20900="opacity:0.5;" data-21000="opacity:1;"></div>
+          <!-- "construction04_AR" photo -->
+          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:900px;" data-21400="opacity:1;" data-22000="opacity:1;" data-22500="opacity:1;"></div>
           <!-- end "construction04_AR" photo -->
 
 
           <!-- "Casino_Pods" video -->
-          <div class="video-container" style="height:1000px;margin-top:0px;margin-bottom: 1000px;" >
-            <video data-mediaid="Casino_Pods" data-startmedia="21000"></video>
+          <div class="video-container" style="height:1000px;margin-top:100px;margin-bottom: 1000px;" >
+            <video data-mediaid="Casino_Pods" data-startmedia="23100"></video>
           </div>
           <!-- end "Casino_Pods" video -->
 
