final things__except text

--- a/public/index.html
+++ b/public/index.html
@@ -210,11 +210,11 @@
 
 
           <!-- "demolition686_steel_JB" photo -->
-          <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:800px;" data-22000="opacity:0;" data-22500="opacity:1;" data-23000="opacity:1;" data-24500="opacity:0;" ></div>
+          <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:800px;" data-22000="opacity:0;" data-22300="opacity:0.5;" data-22600="opacity:1;" ></div>
           <!-- end "demolition686_steel_JB" photo -->
 
           <!-- "construction04_AR" photo -->
-          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:900px;" data-23700="opacity:1;" data-239000="opacity:0;"></div>
+          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:900px;" data-23700="opacity:1;" data-23900="opacity:0;"></div>
           <!-- end "construction04_AR" photo -->
 
 
