text (but needs to indent all further

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1295px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1200px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of US industry</p>
             </div>
@@ -335,23 +335,18 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:4550px;" class="text-overlay" data-6500="opacity:0;" data-6630="opacity:1;" data-6700="opacity:1;" data-6800="opacity:0;">
+            <div style="margin-top:4120px;" class="text-overlay" data-6600="opacity:0;" data-6690="opacity:1;" data-6700="opacity:1;" data-6780="opacity:1;" data-6835="opacity:0;">
               <p>–Richie Chech <br>
                 Former Steel Worker</p>
             </div>
             <!-- end text overlay -->
             
-            <!-- text overlay -->
-<!--             <div style="margin-top:200px;" class="text-overlay">
-              <p>Workers at “The Steel” forged:
-              <ul>
-                <li>Lincoln Tunnel</li>
-                <li>Holland Tunnel</li>
-                <li>Rockefeller Center</li>
-                <li>Madison Square Garden</li>
-                <li>Hoover Dam</li>
-                <li>WW II armaments &amp; ships...</li>
-              </ul>
+           <!-- text overlay -->
+            <div style="margin-top:19950px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:0;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:0;">
+              <p>–Sheldon Adelson <br>
+                Casino Owner</p>
+            </div>
+            <!-- end text overlay -->
 </p>
             </div> -->
             <!-- end text overlay -->
