text -- but needs to be adjusted for position and opacity

--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1200px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1120px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of US industry</p>
             </div>
@@ -360,6 +360,37 @@
             <div style="margin-top:19950px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:0;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:0;">
               <p>–Sheldon Adelson <br>
                 Casino Owner</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="margin-top:20950px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:1;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
+              <p>–Project by Andrea Rollefson &amp; Jesse Epstein <br>
+                
+                Photography, Audio Interviews &amp; Film: <br>
+                Andrea Rollefson <br>
+                Ian Allen <br>
+                Jeff Sias &amp; Bryan Papciak, Handcranked Productions <br>
+                Jeremy Blakeslee <br>
+                Jesse Epstein <br>
+                Rob Featherstone <br>
+                <br>
+                Film Clips: <br>
+                Jesse Epstein <br>
+                Pete Slife <br>
+                <br>
+                Music: <br>  
+                Ben Epstein (DJ Yamin) <br>
+                
+                Website: <br>
+                Andrew Dayton <br>
+                Andrea Rollefson <br>
+                Susannah Feinstein <br>
+
+                Special thanks: <br>          
+                Chinagraph <br>
+                Cinelan <br>
+                The Steel Workers Archive</p>
             </div>
             <!-- end text overlay -->
 </p>
