Increased margins for text

--- a/public/index.html
+++ b/public/index.html
@@ -357,7 +357,7 @@
             <!-- end text overlay -->
             
            <!-- text overlay -->
-            <div style="margin-top:19000px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:1;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
+            <div style="margin-top:19000px;padding-left: 75px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:1;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
               <p>–Sheldon Adelson <br>
                 Casino Owner</p>
             </div>
