intro and richie text good/ sheldon and credit TO DO

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 
 
           <!-- "Casino_Pods" video -->
-          <div class="video-container" style="height:1000px;margin-top:200px;margin-bottom: 400px;" >
+          <div class="video-container" style="height:1000px;margin-top:200px;margin-bottom: px;" >
             <video data-mediaid="Casino_Pods" data-startmedia="23500" data-stopmedia="25100"></video>
           </div>
           <!-- end "Casino_Pods" video -->
@@ -260,7 +260,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1110px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1235px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of US industry</p>
             </div>
@@ -268,7 +268,7 @@
 
              <!-- text overlay -->
             <div style="margin-top:0px;" class="text-overlay" data-0="opacity:0;" data-1925="opacity:0;" data-2125="opacity:1;" data-2400="opacity:1;" data-2575="opacity:0">
-              <p> --creating rail, skyscrapers &amp; infrastructure that helped build America.</p>
+              <p> &mdash; creating rail, skyscrapers &amp; infrastructure that helped build America.</p>
             </div>
             <!-- end text overlay -->
 
@@ -350,21 +350,21 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:3925px;" class="text-overlay" data-6700="opacity:0;" data-6810="opacity:1;" data-6905="opacity:1;" data-6935="opacity:0;">
-              <p>–Richie Chech <br>
+            <div style="margin-top:4190px;" class="text-overlay" data-6700="opacity:0;" data-6810="opacity:1;" data-6905="opacity:1;" data-6935="opacity:0;">
+              <p>– Richie Chech <br>
                 Former Steel Worker</p>
             </div>
             <!-- end text overlay -->
             
            <!-- text overlay -->
-            <div style="margin-top:19000px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:1;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
-              <p>–Sheldon Adelson <br>
+            <div style="margin-top:19110px;" class="text-overlay" data-6600="opacity:1;" data-24550="opacity:1;" data-24680="opacity:1;" data-24800="opacity:1;">
+              <p>– Sheldon Adelson <br>
                 Casino Owner</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:19000px;" class="text-overlay" data-6600="opacity:1;" data-24400="opacity:1;" data-24550="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
+            <div style="margin-top:500px;" class="text-overlay" data-6600="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
               <p>–Project by Andrea Rollefson &amp; Jesse Epstein <br>
                 <br>
                 Website: <br>
