removed dash before project in credits

--- a/public/index.html
+++ b/public/index.html
@@ -365,7 +365,7 @@
 
             <!-- text overlay -->
             <div style="margin-top:800px;" class="text-overlay" data-6600="opacity:1;" data-24600="opacity:1;" data-24625="opacity:1;">
-              <p>–Project by Andrea Rollefson &amp; Jesse Epstein <br>
+              <p>Project by Andrea Rollefson &amp; Jesse Epstein <br>
                 <br>
                 Website: <br>
                 Andrew Dayton <br>
