AUDIO CHANGES incl: add "music like meat market"

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-maxvolume="0.75">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-stopmedia="9625" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
@@ -70,7 +70,6 @@
         <!-- "blastfurnaceillustrationgray" photo -->
           <div data-mediaid="blastfurnaceillustrationgray" id="startIllustration" class="image"></div>
           <!-- end "blastfurnaceillustrationgray" photo -->
-
 
          <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:900px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-1825="opacity:1;" data-2250="opacity:0;"></div>
@@ -83,16 +82,24 @@
           </audio>
           <!-- end "Factory_Ambience2" background music -->
 
+          <!-- "Steel_Music_like_MeatMarket" backround music -->
+          <audio data-mediaid="Steel_Music_like_MeatMarket" data-startmedia="7100" data-stopmedia="12040" data-maxvolume="0.25">
+            <div class="audio-caption">Here's a caption for this audio.</div>
+          </audio>
+          <!-- end "Steel_Music_like_MeatMarket" background music -->
+
 
          <!-- "empty_room715_JB" photo -->
           <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2670="opacity:1;" data-3075="opacity:0;"></div>
           <!-- end "empty_room715_JB" photo -->
 
+
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2575" data-stopmedia="4600" data-maxvolume="0.5">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2515" data-stopmedia="4600" data-maxvolume="0.3">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
+
 
          <!-- "Aerial_NoAudio" video -->
           <div class="video-container" style="height:540px;">
@@ -139,7 +146,7 @@
 
 
           <!-- "powerhouse_overlap_IA" photo -->
-          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1190px;" data-8700="opacity:0;" data-8900="opacity:0.5;" data-9300="opacity:1;" data-9900="opacity:1;" data-10500="opacity:0;"></div>
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1190px;" data-8800="opacity:0;" data-8950="opacity:0.5;" data-9300="opacity:1;" data-9900="opacity:1;" data-10500="opacity:0;"></div>
           <!-- end "powerhouse_overlap_IA" photo --> 
 
           <!-- "fan02_NoAudio" video -->
@@ -166,7 +173,7 @@
 
 
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="13890" data-stopmedia="18600">
+          <audio data-mediaid="Strike_Story" data-startmedia="13590" data-stopmedia="18600" data-maxvolume="0.3">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
@@ -207,7 +214,7 @@
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:550px;">
-            <video data-mediaid="Demolition" data-startmedia="19400" data-stopmedia="21200" data-maxvolume="0.5" loop></video>
+            <video data-mediaid="Demolition" data-startmedia="19300" data-stopmedia="21600" data-maxvolume="0.5" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -379,6 +386,10 @@
                 Jeremy Blakeslee <br>
                 Jesse Epstein <br>
                 Rob Featherstone <br>
+                <br>
+                Illustration &amp; Animation:
+                Christopher Vollherbst
+                Josh Yoder
                 <br>
                 Film Clips: <br>
                 Jesse Epstein <br>
