CREDIT ADDITIONS, slight tweak to town02 mvmnt

--- a/public/index.html
+++ b/public/index.html
@@ -188,7 +188,7 @@
           <!-- end "town02_AR" photo -->
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-15000="background-size: 104%;" data-15500="background-size: 100%"></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-15000="background-size: 104%;" data-15450="background-size: 100%"></div>
           <!-- end "town02bw_AR" photo -->
 
           <!-- "town01_AR" photo -->
@@ -387,13 +387,13 @@
                 Jesse Epstein <br>
                 Rob Featherstone <br>
                 <br>
-                Illustration &amp; Animation:
-                Christopher Vollherbst
-                Josh Yoder
-                <br>
                 Film Clips: <br>
                 Jesse Epstein <br>
                 Pete Slife <br>
+                <br>
+                 Illustration &amp; Animation: <br>
+                Christopher Vollherbst <br>
+                Josh Yoder <br>
                 <br>
                 Music: <br>  
                 Ben Epstein (DJ Yamin) <br>
