Switched media.js to pull from amazon, changed scrolling prompt

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         **************************************************************************** -->
 
           <div id="scrollDownWrapper" data-0="opacity:1" data-200="margin-top:0;opacity:0;"> 
-            <div class="prompt">(Scroll Down Slowly)</div>
+            <div class="prompt">(Scroll Slowly)</div>
           </div>
 
 
