--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-stopmedia="9625" data-maxvolume="0.5">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-stopmedia="9625" data-maxvolume="0.05">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
@@ -77,13 +77,13 @@
 
 
           <!-- "Factory_Ambience2" backround music -->
-          <audio data-mediaid="Factory_Ambience2" data-startmedia="1900" data-stopmedia="3350" data-maxvolume="0.15">
+          <audio data-mediaid="Factory_Ambience2" data-startmedia="1900" data-stopmedia="3350'data-endfadelength="5";" data-maxvolume="0.05">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Factory_Ambience2" background music -->
 
           <!-- "Steel_Music_like_MeatMarket" backround music -->
-          <audio data-mediaid="Steel_Music_like_MeatMarket" data-startmedia="7100" data-stopmedia="12040" data-maxvolume="0.25">
+          <audio data-mediaid="Steel_Music_like_MeatMarket" data-startmedia="7100" data-stopmedia="12040" data-maxvolume="0.2">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_like_MeatMarket" background music -->
@@ -95,7 +95,7 @@
 
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2515" data-stopmedia="4600" data-maxvolume="0.3">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2515" data-stopmedia="4600" data-startfadelength="0" data-maxvolume="0.17">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
@@ -173,7 +173,7 @@
 
 
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="13590" data-stopmedia="18600" data-maxvolume="0.3">
+          <audio data-mediaid="Strike_Story" data-startmedia="13590" data-stopmedia="19000" data-startfadelength="0" data-maxvolume="0.07">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
@@ -214,7 +214,7 @@
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:550px;">
-            <video data-mediaid="Demolition" data-startmedia="19300" data-stopmedia="21600" data-maxvolume="0.5" loop></video>
+            <video data-mediaid="Demolition" data-startmedia="19300" data-stopmedia="21600" data-maxvolume="0.4" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -226,7 +226,7 @@
 
          <!-- "casino_chain" video -->
           <div class="video-container" style="height:900px;">
-            <video data-mediaid="casino_chain"  data-startmedia="21000" data-stopmedia="23000"></video>
+            <video data-mediaid="casino_chain"  data-startmedia="21000" data-stopmedia="23000" data-maxvolume="0.5"></video>
           </div>
           <!-- end "casino_chain" video -->  
 
@@ -242,7 +242,7 @@
 
           <!-- "Casino_Pods" video -->
           <div class="video-container" style="height:1000px;margin-top:200px;margin-bottom: px;" >
-            <video data-mediaid="Casino_Pods" data-startmedia="23500" data-stopmedia="25100"></video>
+            <video data-mediaid="Casino_Pods" data-startmedia="23500" data-stopmedia="25100" data-maxvolume="0.8"></video>
           </div>
           <!-- end "Casino_Pods" video -->
 
