--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
 
           <!-- "Factory_Ambience2" backround music -->
-          <audio data-mediaid="Factory_Ambience2" data-startmedia="1900" data-stopmedia="3350'data-endfadelength="5";" data-maxvolume="0.05">
+          <audio data-mediaid="Factory_Ambience2" data-startmedia="1900" data-stopmedia="3350" data-endfadelength="5";" data-maxvolume="0.05">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Factory_Ambience2" background music -->
