Added browser detection

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,19 @@
 
     <div id="wrapper">
 
+    <div id="browser" style="display:none;">
+      <div id="browserWrapper">
+      <h2>Browser not supported :(</h2>
+      <p>Please try reloading in <a target="_blank" href="https://www.google.com/intl/en/chrome/browser/">Google Chrome</a>.</p>
+      </div>
+    </div>
+
 
       <!-- ***************************************************************************
         LOADING SCREEN
       **************************************************************************** --> 
 
-      <div id="loading">
+      <div id="loading" style="display:none;">
 
         <div id="loaderWrapper">
           <img id="fastSpinner" class="loadingSpinner" src="img/twirl.gif" style="width:160px; height:160px;">
@@ -45,7 +52,7 @@
         MAIN CONTENT
       **************************************************************************** -->
 
-      <div id="content">
+      <div id="content" style="display:none;">
 
         <!-- ***************************************************************************
           layer 1 for primary media
